[tool.poetry]
name = "violet"
version = "0.1.0"
description = "A simple image steganography tool."
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.3.0"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
